<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:stretchColumns="1">

        <TableRow style="@style/GroupRow">

            <TextView
                style="@style/GroupLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_span="2"
                android:text="@string/group_userAcceleration" />
        </TableRow>

        <TableRow style="@style/ValueRow">

            <TextView
                style="@style/Label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginStart="16dp"
                android:text="@string/axis_x" />

            <TextView
                android:id="@+id/value_motionUserAcceleration_x"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginStart="8dp"
                android:text="@string/unknown_g" />

        </TableRow>

        <TableRow style="@style/ValueRow">

            <TextView
                style="@style/Label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginStart="16dp"
                android:text="@string/axis_y" />

            <TextView
                android:id="@+id/value_motionUserAcceleration_y"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginStart="8dp"
                android:text="@string/unknown_g" />

        </TableRow>

        <TableRow style="@style/ValueRow">

            <TextView
                style="@style/Label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginStart="16dp"
                android:text="@string/axis_z" />

            <TextView
                android:id="@+id/value_motionUserAcceleration_z"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginStart="8dp"
                android:text="@string/unknown_g" />

        </TableRow>

        <TableRow style="@style/GroupRow">

            <TextView
                style="@style/GroupLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_span="2"
                android:text="@string/group_gravity" />
        </TableRow>

        <TableRow style="@style/ValueRow">

            <TextView
                style="@style/Label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginStart="16dp"
                android:text="@string/axis_x" />

            <TextView
                android:id="@+id/value_motionGravity_x"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginStart="8dp"
                android:text="@string/unknown_g" />

        </TableRow>

        <TableRow style="@style/ValueRow">

            <TextView
                style="@style/Label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginStart="16dp"
                android:text="@string/axis_y" />

            <TextView
                android:id="@+id/value_motionGravity_y"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginStart="8dp"
                android:text="@string/unknown_g" />

        </TableRow>

        <TableRow style="@style/ValueRow">

            <TextView
                style="@style/Label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginStart="16dp"
                android:text="@string/axis_z" />

            <TextView
                android:id="@+id/value_motionGravity_z"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginStart="8dp"
                android:text="@string/unknown_g" />

        </TableRow>

        <TableRow style="@style/GroupRow">

            <TextView
                style="@style/GroupLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_span="2"
                android:text="@string/group_rotation_rate" />
        </TableRow>

        <TableRow style="@style/ValueRow">

            <TextView
                style="@style/Label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginStart="16dp"
                android:text="@string/axis_x" />

            <TextView
                android:id="@+id/value_motionRotation_x"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginStart="8dp"
                android:text="@string/unknown_radians_per_sec" />

        </TableRow>

        <TableRow style="@style/ValueRow">

            <TextView
                style="@style/Label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginStart="16dp"
                android:text="@string/axis_y" />

            <TextView
                android:id="@+id/value_motionRotation_y"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginStart="8dp"
                android:text="@string/unknown_radians_per_sec" />

        </TableRow>

        <TableRow style="@style/ValueRow">

            <TextView
                style="@style/Label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginStart="16dp"
                android:text="@string/axis_z" />

            <TextView
                android:id="@+id/value_motionRotation_z"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginStart="8dp"
                android:text="@string/unknown_radians_per_sec" />

        </TableRow>

        <TableRow style="@style/GroupRow">

            <TextView
                style="@style/GroupLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_span="2"
                android:text="@string/group_accelerometer" />
        </TableRow>

        <TableRow style="@style/ValueRow">

            <TextView
                style="@style/Label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginStart="16dp"
                android:text="@string/axis_x" />

            <TextView
                android:id="@+id/value_accelerometer_x"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginStart="8dp"
                android:text="@string/unknown_g" />

        </TableRow>

        <TableRow style="@style/ValueRow">

            <TextView
                style="@style/Label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginStart="16dp"
                android:text="@string/axis_y" />

            <TextView
                android:id="@+id/value_accelerometer_y"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginStart="8dp"
                android:text="@string/unknown_g" />

        </TableRow>

        <TableRow style="@style/ValueRow">

            <TextView
                style="@style/Label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginStart="16dp"
                android:text="@string/axis_z" />

            <TextView
                android:id="@+id/value_accelerometer_z"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginStart="8dp"
                android:text="@string/unknown_g" />

        </TableRow>

        <TableRow style="@style/GroupRow">

            <TextView
                style="@style/GroupLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_span="2"
                android:text="@string/group_gyroscope" />
        </TableRow>

        <TableRow style="@style/ValueRow">

            <TextView
                style="@style/Label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginStart="16dp"
                android:text="@string/axis_x" />

            <TextView
                android:id="@+id/value_gyroscope_x"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginStart="8dp"
                android:text="@string/unknown_radians_per_sec" />

        </TableRow>

        <TableRow style="@style/ValueRow">

            <TextView
                style="@style/Label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginStart="16dp"
                android:text="@string/axis_y" />

            <TextView
                android:id="@+id/value_gyroscope_y"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginStart="8dp"
                android:text="@string/unknown_radians_per_sec" />

        </TableRow>

        <TableRow style="@style/ValueRow">

            <TextView
                style="@style/Label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginStart="16dp"
                android:text="@string/axis_z" />

            <TextView
                android:id="@+id/value_gyroscope_z"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginStart="8dp"
                android:text="@string/unknown_radians_per_sec" />

        </TableRow>

        <TableRow style="@style/GroupRow">

            <TextView
                style="@style/GroupLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_span="2"
                android:text="@string/group_magnetometer" />
        </TableRow>

        <TableRow style="@style/ValueRow">

            <TextView
                style="@style/Label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginStart="16dp"
                android:text="@string/axis_x" />

            <TextView
                android:id="@+id/value_magnetometer_x"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginStart="8dp"
                android:text="@string/unknown_micro_tesla" />

        </TableRow>

        <TableRow style="@style/ValueRow">

            <TextView
                style="@style/Label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginStart="16dp"
                android:text="@string/axis_y" />

            <TextView
                android:id="@+id/value_magnetometer_y"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginStart="8dp"
                android:text="@string/unknown_micro_tesla" />

        </TableRow>

        <TableRow style="@style/ValueRow">

            <TextView
                style="@style/Label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginStart="16dp"
                android:text="@string/axis_z" />

            <TextView
                android:id="@+id/value_magnetometer_z"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginStart="8dp"
                android:text="@string/unknown_micro_tesla" />

        </TableRow>
    </TableLayout>
</ScrollView>